# contpy-demo

./: pyproject.toml
contpy_demo/continuation/: newton.py  palc.py
contpy_demo/equations/: equation.py
