[tool.poetry]
name = "contpy-demo"
version = "0.1.0"
description = ""
authors = ["mbataille <martinbataille@gmail.com>"]
readme = "README.md"
packages = [{include = "contpy_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
pandas = "^1.5.1"
threadpoolctl = "^3.1.0"
numdifftools = "^0.9.40"
alive-progress = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
